Indentation fixed under <style> and <p> removed around img

--- a/cookie_recipe_christophe_brumby.html
+++ b/cookie_recipe_christophe_brumby.html
@@ -9,7 +9,7 @@
             padding: 20px;
             margin: 20px;
           }
-        a {
+      a {
           color: #900;
           }
 
@@ -23,7 +23,7 @@
 
     <p>Prep Time: 45 Min</p>
 
-    <p><img src="http://www.opensourcefood.com/public/images/cached/567x/recipe_images/45de3131e7af68137ef3a20aed898b66.jpg" alt="The Best Chocolate Chip Cookies by My Grandma" border="1"></p>
+    <img src="http://www.opensourcefood.com/public/images/cached/567x/recipe_images/45de3131e7af68137ef3a20aed898b66.jpg" alt="The Best Chocolate Chip Cookies by My Grandma" border="1">
 
     <h2>INGREDIENTS</h2>
 
